# ai_migration_agent

./: .gitignore
backend/: pyproject.toml  test.py
backend/app/: main.py  state.py
backend/app/agents/: compatibility_assessment_agent.py  file_classifier_agent.py  official_source_discovery_agent.py  stability_analyzer_agent.py  version_discovery_agent.py
backend/app/api/: routes.py
backend/app/core/: get_llm.py  schemas.py
backend/app/crew_tools/: latest_version_tool.py
backend/app/crews/: __init__.py  dependency_migrate_crew.py
backend/app/graph/: workflow.py
backend/app/graph/subgraphs/: chat_graph.py  dependency_analysis_graph.py  migration_graph.py
backend/app/models/: file_classification_model.py  version_discovery_model.py
backend/app/nodes/: assessment_summary_node.py  chat_node.py  compatibility_assessment_node.py  dependency_node.py  intent_classifier.py  migrate_dependecy_file_node.py  migration_node.py  migration_planner_node.py  project_context_node.py
backend/app/scanner/: context_builder.py  repo_scanner.py
backend/app/services/latest_version/: dynamic_provider.py  latest_version_service.py
backend/app/services/latest_version/providers/: maven_provider.py  npm_provider.py  nuget_provider.py  provider.py  pubdev_provider.py  pypi_provider.py
backend/app/services/technology_version/: technology_version_service.py
backend/app/utils/: dependency_helpers.py
backend/test_project/react-legacy-test-project/: README.md  package.json
backend/test_project/react-legacy-test-project/src/: App.js
extension/: CHANGELOG.md  README.md  (+2 more)
(+14 files in other folders)
