[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[litellm]>=1.15.4",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.12",
    "langchain-mistralai>=1.1.6",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.50.2",
]
